@@ -1,5 +1,9 @@
 2008-11-04  Mikael Djurfeldt  <mikael@djurfeldt.com>
 
+	* music/connectivity.hh, connectivity.cc: Modified
+	connectivity_map to use indices rather than pointers (which cause
+	problems when the vector of connections is resized).
+
 	* music/debug.hh: New file.
 
 2008-11-03  Mikael Djurfeldt  <mikael@djurfeldt.com>
